--- a/index.html
+++ b/index.html
@@ -154,11 +154,8 @@
             </div>
             <div class="container">
               <div class="row">
-<<<<<<< HEAD
-                <div class="col-lg-12 text-center">``
-=======
                 <div class="col-lg-12 text-center">
->>>>>>> 76af2ebceb76c0640c2037fd0b3e9e8ba4559c75
+                <div class="col-lg-12 text-center">
                   <h2>Art Station</h2>
                   <hr class="star-primary">
                   <a href ="https://www.artstation.com/artist/michaelmedina">
@@ -261,16 +258,7 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-<<<<<<< HEAD
-=======
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
->>>>>>> 76af2ebceb76c0640c2037fd0b3e9e8ba4559c75
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/michael-medina-90998447" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
 
                         </ul>
